# sdcpp-gui

./: .gitignore  README.md  build.py  build_appimage.py  format.sh  pyproject.toml
.github/workflows/: pylint.yml
data/: all_commands.json  commands.json  commands_layout.json  flags_mapping.json
data/locales/: en_US.json  pt_BR.json
sd_cpp_gui/: constants.py  main.py  sd_cpp_gui.spec
sd_cpp_gui/data/: migration_tool.py
sd_cpp_gui/data/db/: __init__.py  backup_manager.py  base_manager.py  data_manager.py  database.py  history_manager.py  init_db.py  model_manager.py  models.py  network_manager.py  queue_manager.py  settings_manager.py
sd_cpp_gui/data/remote/: civitai_adapter.py  civitai_client.py  downloader.py  hf_adapter.py  remote.py  remote_manager.py  types.py
sd_cpp_gui/domain/generation/: __init__.py  commands_loader.py  controls.py  engine.py  interfaces.py  log_handler.py  log_parser.py  parser.py  process_manager.py  processors.py  server_backend.py  states.py  types.py
sd_cpp_gui/domain/maintenance/: library_cleaner.py
sd_cpp_gui/domain/plugins/: interface.py  manager.py
sd_cpp_gui/domain/services/: autocomplete_service.py  image_loader.py  library_scanner.py  sidecar_service.py
sd_cpp_gui/domain/utils/: compatibility.py  sanitization.py
sd_cpp_gui/infrastructure/: di_container.py  event_bus.py  i18n.py  logger.py  paths.py
sd_cpp_gui/plugins/core_embedding/: __init__.py  panel.py
sd_cpp_gui/plugins/core_img2img/: __init__.py  panel.py
sd_cpp_gui/plugins/core_lora/: __init__.py  (+1 more)
sd_cpp_gui/ui/: execution_manager.py  themes.py
(+73 files in other folders)
