[tool.poetry]
name = "sd-cpp-gui"
version = "0.1.0"
description = ""
authors = ["MateusGPe"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pillow = "^12.0.0"
ttkbootstrap = "^1.19.2"
openpyxl = "^3.1.5"
peewee = "^3.18.3"
platformdirs = "^4.2.2"
pyyaml = "^6.0.1"
toml = "^0.10.2"
requests = "^2.32.5"
huggingface-hub = "^1.3.3"
rapidfuzz = "^3.14.3"
pyinstaller = "^6.18.0"


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.3"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
mypy = "^1.19.1"
types-peewee = "^3.18.3.20251105"
types-pillow = "^10.2.0.20240822"
types-openpyxl = "^3.1.5.20250919"
types-pyyaml = "^6.0.12.20250915"
types-toml = "^0.10.8.20240310"
types-requests = "^2.32.4.20250913"
auto-type-annotate = "^1.1.2"
black = "^25.12.0"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.3,<5.0.0)"
]

[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["sd-cpp-gui"]
src_paths="sd_cpp_gui"

[tool.poetry.scripts]
scg="sd_cpp_gui.main:main"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.pycodestyle]
# This overrides the global line-length for the E501 lint rule specifically
max-line-length = 80